{
  "version": 4,
  "terraform_version": "0.14.1",
  "serial": 53,
  "lineage": "b0d2205f-aae1-66dc-a4b4-bfee58665ddd",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:972559840749:vpc/vpc-0ce7d4add119d61a9",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-0ba6e59ea4bc405f6",
            "default_route_table_id": "rtb-02cb9db60961cdd50",
            "default_security_group_id": "sg-0f30f9779ae982ea4",
            "dhcp_options_id": "dopt-0de245aca064c604f",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "existing_default_vpc": true,
            "force_destroy": false,
            "id": "vpc-0ce7d4add119d61a9",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02cb9db60961cdd50",
            "owner_id": "972559840749",
            "tags": {
              "Name": "Default VPC"
            },
            "tags_all": {
              "Name": "Default VPC"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "application-lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:972559840749:loadbalancer/app/team1-alb/78aa0df7f86718bc",
            "arn_suffix": "app/team1-alb/78aa0df7f86718bc",
            "desync_mitigation_mode": "defensive",
            "dns_name": "team1-alb-1965635060.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:972559840749:loadbalancer/app/team1-alb/78aa0df7f86718bc",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "team1-alb",
            "security_groups": [
              "sg-031aece96b09db17d"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0045353adfacbfd08"
              },
              {
                "subnet_id": "subnet-01bf1f865af1951df"
              },
              {
                "subnet_id": "subnet-033919b4346a075e5"
              },
              {
                "subnet_id": "subnet-0b0768d3e44752304"
              },
              {
                "subnet_id": "subnet-0cb554226f56e55b1"
              },
              {
                "subnet_id": "subnet-0f3b783596323fab0"
              }
            ],
            "subnets": [
              "subnet-0045353adfacbfd08",
              "subnet-01bf1f865af1951df",
              "subnet-033919b4346a075e5",
              "subnet-0b0768d3e44752304",
              "subnet-0cb554226f56e55b1",
              "subnet-0f3b783596323fab0"
            ],
            "vpc_id": "vpc-0ce7d4add119d61a9",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_default_vpc.default",
            "aws_security_group.web-server",
            "data.aws_subnet_ids.subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "alb-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:972559840749:listener/app/team1-alb/78aa0df7f86718bc/103862bdd3628b9f",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:972559840749:targetgroup/team1-tg/aa516e5059d188b1",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:972559840749:listener/app/team1-alb/78aa0df7f86718bc/103862bdd3628b9f",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:972559840749:loadbalancer/app/team1-alb/78aa0df7f86718bc",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_default_vpc.default",
            "aws_lb.application-lb",
            "aws_lb_target_group.target-group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "target-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:972559840749:targetgroup/team1-tg/aa516e5059d188b1",
            "arn_suffix": "targetgroup/team1-tg/aa516e5059d188b1",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 10,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:972559840749:targetgroup/team1-tg/aa516e5059d188b1",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "team1-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0ce7d4add119d61a9"
          },
          "dependencies": [
            "aws_default_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:972559840749:security-group/sg-031aece96b09db17d",
            "description": "Allow incoming HTTP Connections",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-031aece96b09db17d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "web-server",
            "name_prefix": "",
            "owner_id": "972559840749",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0ce7d4add119d61a9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_default_vpc.default"
          ]
        }
      ]
    }
  ]
}